# sudoku_solver

./: README.md  pubspec.yaml
android/: CMakeLists.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/fdqms/sudoku_solver/: MainActivity.java
android/app/src/profile/: AndroidManifest.xml
ios/Runner.xcodeproj/: project.pbxproj
lib/: camera.dart  home.dart  main.dart  native.dart  state.dart
solver/: solver.cpp  solver.hpp
test/: widget_test.dart
web/: index.html
